# halfling

./: Cargo.toml  README.md
src/: error.rs  integer.rs  internal.rs  lib.rs  nibble.rs  ordering.rs
