[package]
authors = ["Oliver Wooding <oliverwooding@icloud.com>"]
name = "halfling"
version = "0.1.4"
edition = "2021"
readme = "README.md"
repository = "https://github.com/eikopf/halfling"
license = "MIT"
keywords = ["nibble", "nibbles", "nybble", "nybbles", "packed"]
categories = ["encoding", "data-structures"]
description = "A collection of basic utilities for working with nibbles."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
thiserror = "1.0.51"
