[package]
authors = ["Oliver Wooding <oliverwooding@icloud.com>"]
name = "halfling"
version = "0.8.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/eikopf/halfling"
license = "MIT"
keywords = ["nibble", "nybl", "no_std"]
categories = ["encoding", "data-structures"]
description = "A collection of basic utilities for working with nibbles."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.12"
